# SmallServer

./: .gitignore  CMakeLists.txt  Headers.h  Parser.h  README.md  Server.cpp  Server.h  StepikHttpServer.cpp  conanfile.py  default.conf  readme.md
Defaults/: default.conf  hello.html
Server/: CMakeLists.txt  Headers.h  Parser.h  Server.cpp  Server.h  StepikHttpServer.cpp  client_request.cpp  client_request.h  cmd_interpreter.cpp  cmd_interpreter.h  default_configure.h  headers.h  http_answers.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  server.cpp  server.h  server_configure.h  server_console_commander.cpp  server_console_commander.h  utils.cpp  utils.h
